--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <title>Google</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- adding font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="nav">
@@ -13,27 +14,27 @@
         </ul>
 
         <ul class="right-nav">
-            <li><a href="#">Gmail</a></li>
-            <li><a href="#">Images</a></li>
-            <li><a href="#">Docs</a></li>
             <li><a href="#">Notifications</a></li>
+            <li><a href="#">Docs</a></li>
             <li><a href="#">Profile</a></li>
+            <li><a href="#">Images</a></li>
+            <li><a href="#">Gmail</a></li>
         </ul>
     </div>
 
     <div class="main">
-        <img src="/img/main_logo.png" alt="Google logo">
+        <!-- <img src="/img/main_logo.png" alt="Google logo"> -->
+        <img src="http://pngimg.com/uploads/google/google_PNG19644.png" alt="Google logo again" width="272px" height="110px">
 
         <form action="#">
-            <input type="text">
-
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm Feeling Lucky">
+            <div>
+                <input type="text">
+            </div>
+            <div>
+                <input type="submit" value="Google Search">
+                <input type="submit" value="I'm Feeling Lucky">
+            </div>
         </form>
-        <ul>
-            <li><a href="#">Google Search</a></li>
-            <li><a href="#">I'm Feeling Lucky</a></li>
-        </ul>
     </div>
 
     <div class="footer">
@@ -42,9 +43,9 @@
             <li><a href="#">Business</a></li>
         </ul>
         <ul class="right-nav">
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
             <li><a href="#">Settings</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
         </ul>
     </div>
 </body>
